<resources>
    <string name="app_name">Quiz App</string>
    <string name="action_settings">Settings</string>
    <string name="quiz_name">Quiz</string>
    <string name="cat_image_description">Cat Image</string>
    <string name="cat">Cat</string>
    <string name="dog">Dog</string>
    <string name="dolphine">Dolphin</string>
    <string name="what_is_that_animal">What is that animal?</string>
    <string name="ex_elephant">ex. elephant</string>
    <string name="check_all_animals_only">Check all animals only ?</string>
    <string name="bed">Bed</string>
    <string name="submit">Submit</string>
</resources>
