<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/border"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/cat_image_description"
        android:scaleType="centerCrop"
        android:src="@drawable/cat" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/what_is_that_animal"
        android:textColor="@color/colorText" />

    <EditText
        android:id="@+id/editTextQuestionTwoAnswerCat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ex_elephant" />
</LinearLayout>
