<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/border"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/dolphine"
        android:paddingBottom="16dp"
        android:scaleType="fitXY"
        android:src="@drawable/dolphine" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_is_that_animal"
        android:textColor="@color/colorText" />

    <RadioGroup
        android:id="@+id/radioGroupQuestionOneDolphine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButtonQuestionOneDolphin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dolphine"
            android:textColor="@color/colorText" />

        <RadioButton
            android:id="@+id/radioButtonQuestionOneDog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dog"
            android:textColor="@color/colorText" />
    </RadioGroup>
</LinearLayout>
